imgui-sdl3-sys/src/generated/sdlgpu3_backend.rs

/* automatically generated by rust-bindgen 0.72.1 */

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]
#![allow(clippy::all)]
#![allow(unsafe_op_in_unsafe_fn)]
use super::*;

#[repr(C)]
#[derive(Copy, Clone)]
pub struct cImGui_ImplSDLGPU3_InitInfo {
    pub Device: *mut SDL_GPUDevice,
    pub ColorTargetFormat: SDL_GPUTextureFormat,
    pub MSAASamples: SDL_GPUSampleCount,
    pub SwapchainComposition: SDL_GPUSwapchainComposition,
    pub PresentMode: SDL_GPUPresentMode,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of cImGui_ImplSDLGPU3_InitInfo"]
        [::core::mem::size_of::<cImGui_ImplSDLGPU3_InitInfo>() - 24usize];
    ["Alignment of cImGui_ImplSDLGPU3_InitInfo"]
        [::core::mem::align_of::<cImGui_ImplSDLGPU3_InitInfo>() - 8usize];
    ["Offset of field: cImGui_ImplSDLGPU3_InitInfo::Device"]
        [::core::mem::offset_of!(cImGui_ImplSDLGPU3_InitInfo, Device) - 0usize];
    ["Offset of field: cImGui_ImplSDLGPU3_InitInfo::ColorTargetFormat"]
        [::core::mem::offset_of!(cImGui_ImplSDLGPU3_InitInfo, ColorTargetFormat) - 8usize];
    ["Offset of field: cImGui_ImplSDLGPU3_InitInfo::MSAASamples"]
        [::core::mem::offset_of!(cImGui_ImplSDLGPU3_InitInfo, MSAASamples) - 12usize];
    ["Offset of field: cImGui_ImplSDLGPU3_InitInfo::SwapchainComposition"]
        [::core::mem::offset_of!(cImGui_ImplSDLGPU3_InitInfo, SwapchainComposition) - 16usize];
    ["Offset of field: cImGui_ImplSDLGPU3_InitInfo::PresentMode"]
        [::core::mem::offset_of!(cImGui_ImplSDLGPU3_InitInfo, PresentMode) - 20usize];
};
unsafe extern "C" {
    pub fn cImGui_ImplSDLGPU3_Init(info: *mut cImGui_ImplSDLGPU3_InitInfo) -> bool;
}
unsafe extern "C" {
    pub fn cImGui_ImplSDLGPU3_Shutdown();
}
unsafe extern "C" {
    pub fn cImGui_ImplSDLGPU3_NewFrame();
}
unsafe extern "C" {
    pub fn cImGui_ImplSDLGPU3_PrepareDrawData(
        draw_data: *mut ImDrawData,
        command_buffer: *mut SDL_GPUCommandBuffer,
    );
}
unsafe extern "C" {
    pub fn cImGui_ImplSDLGPU3_RenderDrawData(
        draw_data: *mut ImDrawData,
        command_buffer: *mut SDL_GPUCommandBuffer,
        render_pass: *mut SDL_GPURenderPass,
        pipeline: *mut SDL_GPUGraphicsPipeline,
    );
}
unsafe extern "C" {
    pub fn cImGui_ImplSDLGPU3_CreateDeviceObjects();
}
unsafe extern "C" {
    pub fn cImGui_ImplSDLGPU3_DestroyDeviceObjects();
}
unsafe extern "C" {
    pub fn cImGui_ImplSDLGPU3_UpdateTexture(tex: *mut ImTextureData);
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cImGui_ImplSDLGPU3_RenderState {
    pub Device: *mut SDL_GPUDevice,
    pub SamplerDefault: *mut SDL_GPUSampler,
    pub SamplerCurrent: *mut SDL_GPUSampler,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of cImGui_ImplSDLGPU3_RenderState"]
        [::core::mem::size_of::<cImGui_ImplSDLGPU3_RenderState>() - 24usize];
    ["Alignment of cImGui_ImplSDLGPU3_RenderState"]
        [::core::mem::align_of::<cImGui_ImplSDLGPU3_RenderState>() - 8usize];
    ["Offset of field: cImGui_ImplSDLGPU3_RenderState::Device"]
        [::core::mem::offset_of!(cImGui_ImplSDLGPU3_RenderState, Device) - 0usize];
    ["Offset of field: cImGui_ImplSDLGPU3_RenderState::SamplerDefault"]
        [::core::mem::offset_of!(cImGui_ImplSDLGPU3_RenderState, SamplerDefault) - 8usize];
    ["Offset of field: cImGui_ImplSDLGPU3_RenderState::SamplerCurrent"]
        [::core::mem::offset_of!(cImGui_ImplSDLGPU3_RenderState, SamplerCurrent) - 16usize];
};
